--- a/testingtimes2.html
+++ b/testingtimes2.html
@@ -9,5 +9,11 @@
 <body>
     Konban wa
     Ohayou gozaimasu
+    <div>
+       
+    </div>
+
+    <script src="apitrivia.js">
+    </script>
 </body>
 </html>
